--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.vivo.emanon.cisum">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:name=".CisumApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,6 +20,22 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".LoginActivity">
+        </activity>
+
+        <service
+            android:name=".AudioService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
+        <service
+            android:name=".StepCounterService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
+
+        <activity android:name=".BaseActivity">
         </activity>
     </application>
 
