--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,62 +9,62 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
-        android:name=".CisumApp"
+        android:name=".App.CisumApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashActivity">
+        <activity android:name=".Activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity">
+        <activity android:name=".Activity.LoginActivity">
         </activity>
 
         <service
-            android:name=".AudioService"
+            android:name=".Service.AudioService"
             android:enabled="true"
             android:exported="true">
         </service>
         <service
-            android:name=".StepCounterService"
+            android:name=".Service.StepCounterService"
             android:enabled="true"
             android:exported="true">
         </service>
         <service
-            android:name=".ScreenLockService"
+            android:name=".Service.ScreenLockService"
             android:enabled="true"
             android:exported="true">
         </service>
 
-        <activity android:name=".BaseActivity">
+        <activity android:name=".Activity.BaseActivity">
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".Activity.MainActivity">
         </activity>
 
-        <receiver android:name=".DownloadReceiver">
+        <receiver android:name=".Receiver.DownloadReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
             </intent-filter>
         </receiver>
-        <receiver android:name=".NotificationReceiver">
+        <receiver android:name=".Receiver.NotificationReceiver">
             <intent-filter>
                 <action android:name="cisum.NOTIFICATION_ACTIONS"/>
             </intent-filter>
         </receiver>
 
         <activity
-            android:name=".ScreenLockActivity"
+            android:name=".Activity.ScreenLockActivity"
             android:launchMode="singleInstance"
             android:taskAffinity="com.vivo.emanon.cisum.screenlock"
             android:theme="@style/ScreenLockTheme">
         </activity>
-        <activity android:name=".AboutActivity">
+        <activity android:name=".Activity.AboutActivity">
         </activity>
     </application>
 
